--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
+    "sql.js": "^1.6.2",
     "use-immer": "^0.6.0",
     "web-vitals": "^1.0.1"
   },
