--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "immer": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flow-renderer": "^9.6.11",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
     "sql.js": "^1.6.2",
