--- a/package.json
+++ b/package.json
@@ -1,43 +1,33 @@
 {
-  "name": "query-builder",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "immer": "^8.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-flow-renderer": "^9.6.11",
-    "react-scripts": "4.0.3",
-    "react-select": "^5.2.1",
-    "sql.js": "^1.6.2",
-    "use-immer": "^0.6.0",
-    "web-vitals": "^1.0.1"
-  },
+  "name": "vite-react-stitches-radix",
+  "version": "0.0.1",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@modulz/radix-icons": "^4.0.0",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-tooltip": "^0.1.2",
+    "@stitches/react": "^1.2.6",
+    "classcat": "^5.0.3",
+    "d3-selection": "^3.0.0",
+    "d3-zoom": "^3.0.0",
+    "immer": "^9.0.7",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-draggable": "^4.4.4",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "sql.js": "^1.6.2",
+    "use-immer": "^0.6.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@vitejs/plugin-react": "^1.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-react-app": "^6.0.0",
+    "vite": "^2.6.4",
+    "vite-plugin-react-svg": "^0.2.0"
   }
 }
