--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,12 @@
 {
   "exclude": ["node_modules"],
   "compilerOptions": {
+    "jsx": "react",
     "paths": {
       "js/*": ["./src/js/*"],
       "graph/*": ["./src/graph/*"],
       "editor/*": ["./src/editor/*"]
-    }
+    },
+    "noEmit": true
   }
 }
