Wip on autocompletion for sql

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^0.19.12",
     "@codemirror/commands": "^0.19.7",
+    "@codemirror/lang-sql": "^0.19.4",
     "@codemirror/state": "^0.19.6",
     "@codemirror/theme-one-dark": "^0.19.1",
     "@codemirror/view": "^0.19.39",
