--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@codemirror/lang-sql": "^0.19.4",
     "@codemirror/state": "^0.19.6",
     "@codemirror/theme-one-dark": "^0.19.1",
+    "@codemirror/tooltip": "^0.19.13",
     "@codemirror/view": "^0.19.39",
     "@modulz/radix-icons": "^4.0.0",
     "@radix-ui/colors": "^0.1.8",
