--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@codemirror/view": "^0.19.39",
     "@modulz/radix-icons": "^4.0.0",
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-dialog": "^0.1.5",
     "@radix-ui/react-tooltip": "^0.1.2",
     "@stitches/react": "^1.2.6",
     "classcat": "^5.0.3",
