--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@codemirror/autocomplete": "^0.19.12",
     "@codemirror/commands": "^0.19.7",
+    "@codemirror/comment": "^0.19.0",
     "@codemirror/highlight": "^0.19.7",
+    "@codemirror/history": "^0.19.2",
     "@codemirror/lang-sql": "^0.19.4",
     "@codemirror/language": "^0.19.7",
     "@codemirror/state": "^0.19.6",
