Victory line chart working

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "redux": "^4.1.2",
     "sql-formatter": "^4.0.2",
     "sql.js": "^1.6.2",
-    "use-immer": "^0.6.0"
+    "use-immer": "^0.6.0",
+    "victory": "^36.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
